--- a/src/css/index.css
+++ b/src/css/index.css
@@ -235,3 +235,9 @@ body {
   color: green;
   margin-top: 10px;
 }
+.card {
+  background: var(--surface-card);
+  padding: 2rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+}
